--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,14 @@
         <div class="card">
             <h1>Painel Administrativo</h1>
 
-            <form method="POST" action="/home">
+            <form method='POST' action='/home'>
                 <div class="label-float">
-                    <input type="text" id="usuario" placeholder="">
+                    <input type="text" id="usuario" placeholder="" name="usuario" required>
                     <label for="usuario">Usuário</label>
                 </div>
 
                 <div class="label-float">
-                    <input type="password" id="senha" placeholder="">
+                    <input type="password" id="senha" placeholder="" name="senha" required>
                     <label for="usuario">Senha</label>
                 </div>
 
